...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Find" id="xev-AR-xqX">
                        <barButtonItem key="leftBarButtonItem" image="user" id="qKl-ru-cay">
                            <connections>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="24"/>
                                        <state key="normal" title="Log in">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="BUP-eY-sb7">
                                        <rect key="frame" x="0.0" y="180" width="382" height="60"/>
                                        <color key="backgroundColor" name="systemBackgrooundPrimary"/>
...
                                        <color key="textColor" name="labelColorPrimary"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
                                        <connections>
                                            <outlet property="delegate" destination="leJ-vr-nT5" id="t0F-CG-2ek"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
                                <state key="normal" title="Sign In">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
                                <state key="normal" title="Done">
                                    <color key="titleColor" name="systemBackgrooundPrimary"/>
                                </state>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Filter" id="bTx-fZ-Yhw"/>
                    <connections>
                        <outlet property="dpEndDate" destination="KED-fT-Zg5" id="NGD-a2-FLd"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="igz-iB-qou" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Create" image="create" id="1At-xF-zrC"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Qbt-o8-aNm">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nv7-KH-tpl" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Runs" image="run" id="jZR-e7-ql6"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Po5-hN-zp3">
...
                                <segments>
                                    <segment title="Joined"/>
                                    <segment title="Created"/>
                                </segments>
                                <connections>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Profil" largeTitleDisplayMode="never" id="qQz-gn-g5g">
                        <barButtonItem key="backBarButtonItem" title="Back" id="sIt-mS-2D9"/>
                        <barButtonItem key="rightBarButtonItem" title="Item" image="déconnexion" id="hHE-i5-C4l">
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Notification" largeTitleDisplayMode="never" id="P4f-ny-MeV">
                        <barButtonItem key="backBarButtonItem" title="Back" id="ADN-MP-Ncq"/>
                    </navigationItem>
...
