...
                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                        <color key="value" name="systemBackgroundSecondary"/>
                    </userDefinedRuntimeAttribute>
                </userDefinedRuntimeAttributes>
            </tableViewCellContentView>
            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
            <accessibility key="accessibilityConfiguration" identifier="runCell"/>
            <userDefinedRuntimeAttributes>
                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                    <real key="value" value="5"/>
                </userDefinedRuntimeAttribute>
            </userDefinedRuntimeAttributes>
            <connections>
...
